<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.riversidecorps.rebuy.LoginActivity"
    android:gravity="center"
    android:weightSum="1">

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="121dp"
        android:layout_height="102dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/logoTV"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_prompt"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_prompt"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/login_btn" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/register_btn" />
    </LinearLayout>

</LinearLayout>