<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/itemImageIV"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/itemPreview1IV"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignTop="@+id/itemPreview2IV"
            android:layout_toLeftOf="@+id/itemPreview2IV"
            app:srcCompat="@drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/itemPreview2IV"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/itemImageIV"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/itemPreview3IV"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignTop="@+id/itemPreview2IV"
            android:layout_toRightOf="@+id/itemPreview2IV"
            app:srcCompat="@drawable/ic_menu_camera" />

    </RelativeLayout>

    <TextView
        android:id="@+id/item_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxWidth="150dp"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/buyer_pre"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/buyer_pre"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/item_buyer"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/original_price_pre"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/original_price_pre"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/item_original_price"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/offer_price_pre"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/offer_price_pre"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/item_offer_price"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/quantity_pre"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quantity_pre"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/offer_quantity"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/description_pre"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/description_pre"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/offer_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/date_pre"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/date_pre"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/offer_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:text="@string/error_text"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept_offer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_text" />

        <Button
            android:id="@+id/reject_offer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_text" />

    </LinearLayout>



</LinearLayout>