<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:ignore="ContentDescription"
    android:padding="7dp"
    android:onClick="viewDetailedOffer">


    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/view2"
        app:cardCornerRadius="0dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:layout_gravity="center" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxWidth="150dp"
            android:text="@string/error_text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/buyer_pre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:text="@string/buyer_pre"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/item_buyer"
            android:layout_toLeftOf="@+id/item_buyer"
            android:layout_toStartOf="@+id/item_buyer"
            android:paddingRight="5dp"
            />

        <TextView
            android:id="@+id/item_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:text="@string/error_text"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/original_price_pre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:text="@string/original_price_pre"
            android:textSize="12sp"
            android:layout_above="@+id/item_buyer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/item_original_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="end"
            android:text="@string/error_text"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/original_price_pre"
            android:layout_alignBottom="@+id/original_price_pre"
            android:layout_toRightOf="@+id/original_price_pre"
            android:layout_toEndOf="@+id/original_price_pre" />


        <TextView
            android:id="@+id/offer_price_pre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:text="@string/offer_price_pre"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/item_offer_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:text="@string/error_text"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/offer_price_pre"
            android:layout_toEndOf="@+id/offer_price_pre" />

    </RelativeLayout>

</LinearLayout>
