<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.riversidecorps.rebuy.CreateOfferActivity"
    tools:showIn="@layout/app_bar_create_offer">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/itemImagePreviewIV"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginRight="8dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/itemNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/itemImagePreviewIV"
            android:text="Example Item #1"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemNameTV"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/itemOriginalPricePreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/price_pre"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itemOriginalPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/error_text"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itemQuantityPreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="10dp"
                android:text="@string/quantity_pre"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/itemQuantityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/error_text"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>

        <EditText
            android:id="@+id/itemOfferPriceET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_toRightOf="@+id/itemImagePreviewIV"
            android:hint="Offering Price"
            android:inputType="number" />

        <EditText
            android:id="@+id/offerQuantityET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout"
            android:hint="Offering Amount"
            android:inputType="number" />

        <TextView
            android:id="@+id/offerAuthorTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="From: buyerID" />

    </RelativeLayout>

    <Button
        android:id="@+id/cancelBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:theme="@style/ButtonColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/makeOfferBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make offer"
        android:theme="@style/ButtonColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/makeOfferBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />


</RelativeLayout>
